--- a/Index-chuoi.html
+++ b/Index-chuoi.html
@@ -45,13 +45,13 @@
             <div style="text-align: left;">
                 <h2><strong>Thành viên nhóm 9 </strong></h2>
                 <ul>
-                    <li>Dương Quốc Vương</li>
-                    <li>Huỳnh Phong Nhã</li>
-                    <li>Lương Huy Hoàng</li>
-                    <li>Phạm Duy Thanh</li>
-                    <li>Phan Diệu Mây</li>
-                    <li>Võ Đình Hoàng Long</li>
-                    <li><strong>Nguyễn Thành Đạt</strong></li>
+                    <li>Dương Quốc Vương - Đối sánh mẫu</li>
+                    <li>Huỳnh Phong Nhã - Tìm kiếm chuỗi</li>
+                    <li>Lương Huy Hoàng - Mật mã</li>
+                    <li>Phạm Duy Thanh - quay, ghép video</li>
+                    <li>Phan Diệu Mây - sắp xếp bảng trộn</li>
+                    <li>Võ Đình Hoàng Long - làm web</li>
+                    <li><strong>Nguyễn Thành Đạt</strong>: nén tập tin</li>
                 </ul>
             </div>
         </div>
@@ -95,6 +95,25 @@
                 height="480"></iframe>
         </div>
         <hr>
+        <div class="texttttt">
+            <ul>
+                <li>
+                    0p00: tìm kiếm chuỗi
+                </li>
+                <li>
+                    3p46: sắp xếp trộn
+                </li>
+                <li>
+                    6p48: nén tập tin
+                </li>
+                <li>
+                    15p10: đối sánh mẫu
+                </li>
+                <li>
+                    18p00: mật mã
+                </li>
+            </ul>
+        </div>
         <div class="texttttt">
             <p>Link tải video thuyết trình <a
                     href="https://drive.google.com/file/d/1_i0ttsE63j4EizUQES4d_GFJQ_NLBV7c/view?usp=sharing"
