--- a/index-sort.html
+++ b/index-sort.html
@@ -18,7 +18,7 @@
       <h1 class="tm-page-header">Nhóm 8</h1>
     </div>
     <div class="tm-main-content">
-      <div style="background-image: url(../img-sort/test1202.jpg);
+      <div style="background-image: url(./img-sort/test1202.jpg);
         background-position: center;
         background-size: cover;
         min-height: 425px;"></div>
